welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:44: error: not found: value posfinale
        posfinale=true
        ^SnakeBuggle:50: error: not found: value posfinale
        posfinale=true
        ^SnakeBuggle:54: error: not found: value posfinale
  return posfinale
         ^SnakeBuggle:54: warning: enclosing method rep has result type Unit: return value discarded
  return posfinale
  ^