welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var posfinale=false
  setCouleurBrosse(Color.blue)
  baisseBrosse()
  while(!posfinale){
    movesnake()
  }
}




def movesnake(){
  while(!estFaceMur()){
    avance()}
 
  rep()
 
  if((estFaceMur()) && (getDirection()==Direction.EST)){
    gauche()
    if(!estFaceMur()){
    	avance()
    	gauche()
    }else{droite()}
  }
  
  if((estFaceMur()) && (getDirection()==Direction.OUEST)){
  	droite()
    if(!estFaceMur()){
  		avance()
  		droite()
    }else{gauche()}
  }
}




def rep(){
  if(estFaceMur()){
    if(getDirection()==Direction.EST){
      gauche()
      if(estFaceMur()){
        posfinale=true
      }else{droite()}
    }
    if(getDirection()==Direction.OUEST){
      droite()
      if(estFaceMur()){
        posfinale=true
      }else{gauche()}
    }
   }
  return posfinale
}